--- a/templates/create.html
+++ b/templates/create.html
@@ -22,7 +22,7 @@
             event.preventDefault();
             console.log(document.getElementById('departure').value)
             // Perform the form submission using JavaScript
-            fetch('/api/rides', {
+            fetch('/ride-managment/api/rides', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json',
